--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+    "options_page": "options.html",
     "manifest_version": 2,
     "name": "Random Wikipedia",
     "description": "Random Wikipedia",
@@ -6,5 +7,6 @@
     "browser_action": {
       "default_icon": "icon.png",
       "default_popup": "popup.html"
-    }
+    },
+    "permissions": ["storage"]
 }
