--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-    "options_page": "options.html",
+    "options_page": "/app/options/index.html",
     "manifest_version": 2,
     "name": "Random Wikipedia",
     "description": "Random Wikipedia",
     "version": "1.0",
     "browser_action": {
       "default_icon": "icon.png",
-      "default_popup": "popup.html"
+      "default_popup": "/app/popup/index.html"
     },
     "permissions": ["storage"]
 }
