--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
-    "options_page": "/app/options/index.html",
     "manifest_version": 2,
-    "name": "Random Wikipedia",
-    "description": "Random Wikipedia",
-    "version": "1.1",
+    "name": "Rapid Acess Google Drive",
+    "description": "Rapid Acess Google Drive",
+    "version": "0.1",
     "browser_action": {
       "default_icon": "icon.png",
       "default_popup": "/app/popup/index.html"
